// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ExecWorkflow/TaskResultList should match snapshot when currentListLayout is equal pagination 1`] = `
<PaginationList
  auditResultActiveKey="123"
  currentListLayout="pagination"
  executeMode="sqls"
  noDuplicate={false}
  pagination={
    {
      "page_index": 1,
      "page_size": 10,
    }
  }
  tableChange={[MockFunction]}
  tableFilterInfo={{}}
  taskId="123"
/>
`;

exports[`test ExecWorkflow/TaskResultList should match snapshot when currentListLayout is equal scroll 1`] = `
<WaterfallList
  auditResultActiveKey="123"
  currentListLayout="scroll"
  executeMode="sqls"
  noDuplicate={false}
  pagination={
    {
      "page_index": 1,
      "page_size": 10,
    }
  }
  tableChange={[MockFunction]}
  tableFilterInfo={{}}
  taskId="123"
/>
`;
